# databricks-powerbi-pipeline

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/: env.example.py  parameters.json
docs/: api-reference.md  architecture.md  configuration.md  data-dictionary.md  deployment.md  monitoring.md  powerbi-setup.md
notebooks/01_bronze/: bronze_ingestion.ipynb
notebooks/02_silver/: silver_transformation.ipynb
notebooks/03_gold/: gold_aggregation.ipynb
src/: __init__.py  deploy_notebooks.py  generate_sample_data.py  health_check.py  monitor_pipeline.py  rollback.py  utils.py  validate_deployment.py
tests/integration/: test_integration.py
tests/unit/: test_data_generation.py  test_utils.py
